<resources>
    <string name="app_name">BookIt</string>
    <string name="app_title">BookIt</string>
    <string name="mainpage_helptext">How are you using BookIt?</string>
    <string name="string_customer">CUSTOMER</string>
    <string name="string_restuarant">RESTAURANT</string>
    <string name="custlogin_title">Log in as a customer</string>
    <string name="custlogin_username">Username</string>
    <string name="custlogin_password">Password</string>
    <string name="string_login">LOG IN</string>
    <string name="custlogin_noacc">Don\'t have an account yet?</string>
    <string name="string_makeone">MAKE ONE</string>
    <string name="restlogin_title">Log in as a restaurant</string>
    <string name="restlogin_noacc">Don\'t have an account yet? Contact your employer or</string>
    <string name="restlogin_register">Register your restaurant</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="promt_phone">Phone</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_address">Address</string>
    <string name="action_registration">Registration</string>
    <string name="action_registration1">Register</string>
</resources>